# runtime-starter-pack

./: .gitignore  DASHBOARD_GUIDE.md  GITHUB_PIPELINE_README.md  GITHUB_TRANSFORMATIONS_README.md  Makefile  QUICKSTART.md  README.md  REFERENCE.md  TRANSFORMATION_SUMMARY.md  TUTORIAL.md  ai_data_modeling_prompt.md  example_queries.py  fruitshop_notebook.py  fruitshop_pipeline.py  github_dashboard.py  github_pipeline.py  github_transformations.py  hugging_face_notebook.py  hugging_face_pipeline_from_duckdb.py  hugging_face_pipeline_from_uri.py  jaffle_transformations.py  lancedb_notebook.py  lancedb_pipeline.py  metrics_notebook.py  pyproject.toml  test.py  transformation_skill.md
.agent/skills/dlt-credentials/: SKILL.md
.agent/skills/openvid-lance/: SKILL.md  dataset-info.md
.cursor/skills/transformation-skill/: SKILL.md
.data/: sample-octolens-mention.csv
.dlt/: .sources  access.config.toml  config.toml
.pipelines/_customer_metrics/: state.json  trace.pickle
.pipelines/_customer_metrics/load/loaded/1770929019.170806/: applied_schema_updates.json  load_package_state.json
.pipelines/_customer_metrics/load/loaded/1770929019.283301/: applied_schema_updates.json  load_package_state.json
.pipelines/_customer_metrics/load/loaded/1770929019.5372832/: load_package_state.json  schema.json
.pipelines/_customer_metrics/load/loaded/1770929020.681601/: load_package_state.json
.pipelines/_customer_metrics/load/loaded/1770929020.7761679/: load_package_state.json
.pipelines/_customer_metrics/load/loaded/1770929021.312628/: load_package_state.json
.pipelines/_customer_metrics/load/loaded/1770929021.414476/: load_package_state.json  schema.json
.pipelines/_customer_metrics/load/loaded/1770929022.0465002/: load_package_state.json
.pipelines/_customer_metrics/load/loaded/1770929022.1369548/: load_package_state.json
.pipelines/_customer_metrics/schemas/: _dlt_data_quality.schema.json  point_of_sale.schema.json
.pipelines/test_jwt/: state.json  trace.pickle
.pipelines/test_jwt/load/loaded/1770923187.4690402/: applied_schema_updates.json  load_package_state.json  schema.json
.pipelines/test_jwt/schemas/: test_source.schema.json
fruitshop_simple_workspace/: fruitshop_notebook.py  pyproject.toml
fruitshop_simple_workspace/.dlt/: config.toml  dev.config.toml  prod.config.toml
fruitshop_simple_workspace/.dlt/.var/dev/pipelines/fruitshop/: state.json  trace.pickle
fruitshop_simple_workspace/.dlt/.var/dev/pipelines/fruitshop/load/loaded/1776117041.8678594/: applied_schema_updates.json  load_package_state.json  schema.json
fruitshop_simple_workspace/.dlt/.var/dev/pipelines/fruitshop/schemas/: fruitshop.schema.json
github/: __init__.py  helpers.py  queries.py
github-example/: .gitignore  github_dq_notebook.py  github_pipeline.py  github_report_notebook.py  github_transformations.py  github_transformations_notebook.py  pyproject.toml  tutorial.md
github-example/.dlt/: access.config.toml  config.toml  dev.config.toml  prod.config.toml
github_ingest_workspace/: __deployment__.py  github_dq_pipeline.py  github_pipeline.py  github_transformations_notebook.py  pyproject.toml
github_ingest_workspace/.dlt/: config.toml  dev.config.toml  prod.config.toml
github_ingest_workspace/.dlt/.var/dev/pipelines/github_pipeline/: state.json  trace.pickle
github_ingest_workspace/.dlt/.var/dev/pipelines/github_pipeline/load/loaded/1776123700.6485412/: applied_schema_updates.json  load_package_state.json  schema.json
github_ingest_workspace/.dlt/.var/dev/pipelines/github_pipeline/schemas/: github_rest_api_source.schema.json
hugging_face_demo/: AGENTS.md  hugging_face_notebook.py  pyproject.toml
hugging_face_demo/.dlt/: config.toml
jaffle_shop_workspace/: __deployment__.py  jaffle_ingestion.py  jaffle_mcp.py  jaffle_transformations.py  pyproject.toml
jaffle_shop_workspace/.dlt/: access.config.toml  config.toml  dev.config.toml
jaffle_shop_workspace/.dlt/.var/dev/pipelines/jaffle_ingest/: state.json  trace.pickle
jaffle_shop_workspace/.dlt/.var/dev/pipelines/jaffle_ingest/load/loaded/1776122125.2849562/: applied_schema_updates.json  load_package_state.json  schema.json
jaffle_shop_workspace/.dlt/.var/dev/pipelines/jaffle_ingest/schemas/: jaffle_shop_raw_data.schema.json
usgs_earthquakes_workspace/: __deployment__.py  pyproject.toml  usgs_dashboard.py  usgs_pipeline.py  utils.py
usgs_earthquakes_workspace/.dlt/: config.toml  dev.config.toml  prod.config.toml
usgs_earthquakes_workspace/.dlt/.var/dev/pipelines/usgs_earthquake_stats_pipeline/: state.json
usgs_earthquakes_workspace/.dlt/.var/dev/pipelines/usgs_feeds_classified_pipeline/: state.json
usgs_earthquakes_workspace/.dlt/.var/dev/pipelines/usgs_ingest_pipeline/: state.json
usgs_earthquakes_workspace/usgs/: __init__.py  settings.py  transformations.py
workspace_zero/: README.md  fruitshop_notebook.py  fruitshop_pipeline.py  requirements.txt
workspace_zero/.dlt/: config.toml
