[project]
name = "runtime-starter-pack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[motherduck,workspace,hub]>=1.22.1",
    # motherduck does not work with 1.4.3
    "duckdb<1.4.3",
    "dlt-runtime==0.23.0",
    "numpy>=2.3.5",
    "pyarrow-hotfix>=0.7",
    "openai>=1.0.0",
    "marimo>=0.19.0",
    "pyzmq>=27.1.0",
]
