[project]
name = "fruitshop-simple-workspace"
version = "0.1.0"
description = "Simple dlt workspace with a single pipeline and notebook"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace]",
    "dlthub",
    "duckdb<1.4.3",
    "dlt-runtime",
    "marimo>=0.19.0",
]

[tool.uv.sources]
# dlt = { path = "../../dlt", editable = true }
dlt = { url="https://github.com/dlt-hub/dlt/archive/refs/heads/feat/workspace-deployment.zip?v=7"}
# dlt-runtime = { path = "../../runtime/cli", editable = true }
