[project]
name = "fruitshop-simple-workspace"
version = "0.1.0"
description = "Simple dlt workspace with a single pipeline and notebook"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace,hub]>=1.26.0",
    "duckdb<1.4.3",
    "marimo>=0.23.3",
]

[tool.uv.sources]

[tool.uv]
# Add constraints for transitory dependencies, usually a result of a dependabot alert
constraint-dependencies = [
    "dlt-runtime>=0.26.2a1"
]