[project]
name = "github-ingest-workspace"
version = "0.1.0"
description = "GitHub ingest workspace with job decorators and deployment"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace,hub]",
    "dlthub",
    "duckdb<1.4.3",
    "dlt-runtime",
    "marimo>=0.19.0",
    "altair>=6.0.0",
    "pandas>=3.0.0",
]

[tool.uv.sources]
dlt = { url="https://github.com/dlt-hub/dlt/archive/refs/heads/feat/workspace-deployment.zip?v=7"}
# dlt = { path = "../../dlt", editable = true }
# dlt-runtime = { path = "../../runtime/cli", editable = true }
