[project]
name = "runtime-starter-pack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dlt[motherduck,hub,s3]>=1.26.0",
    "numpy>=2.3.5",
    "pyarrow-hotfix>=0.7",
    "openai>=1.0.0",
    "marimo>=0.19.0",
    "pyzmq>=27.1.0",
]

[tool.uv]
# Add constraints for transitory dependencies, usually a result of a dependabot alert
constraint-dependencies = [
    "dlt-runtime>=0.26.2a1"
]