[project]
name = "jaffle-shop-workspace"
version = "0.1.0"
description = "Jaffle Shop workspace with connected ingest and transform pipelines"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace,hub]>=1.26.0",
    "duckdb<1.4.3",
    "fastmcp",
]

[tool.uv.sources]

[tool.uv]
# Add constraints for transitory dependencies, usually a result of a dependabot alert
constraint-dependencies = [
    "dlt-runtime>=0.26.2a1"
]