[project]
name = "usgs-earthquakes-workspace"
version = "0.1.0"
description = "USGS earthquake workspace with incremental loading and freshness cascade"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace,hub]==1.26.0a1",
    "duckdb<1.5",
    "altair>=6.0.0",
]

[dependency-groups]
ibis = ["ibis-framework[duckdb]"]

[tool.uv.sources]
