[project]
name = "usgs-earthquakes-workspace"
version = "0.1.0"
description = "USGS earthquake workspace with incremental loading and freshness cascade"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace,hub]>=1.26.0",
    "duckdb<1.5",
    "altair>=6.0.0",
]

[dependency-groups]
ibis = ["ibis-framework[duckdb]"]

[tool.uv.sources]

[tool.uv]
# Add constraints for transitory dependencies, usually a result of a dependabot alert
constraint-dependencies = [
    "dlt-runtime>=0.26.2a1"
]