[project]
name = "usgs-earthquakes-workspace"
version = "0.1.0"
description = "USGS earthquake workspace with incremental loading and freshness cascade"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck,workspace,hub,duckdb]>=1.26.0",
    "duckdb<1.5",
    "altair>=6.0.0",
    "numpy",
    "pandas",
]

[dependency-groups]
ibis = ["ibis-framework[duckdb]"]

[tool.uv.sources]
